--- a/audiofield/locale/es/LC_MESSAGES/django.po
+++ b/audiofield/locale/es/LC_MESSAGES/django.po
@@ -21,124 +21,125 @@ msgstr ""
 #: admin.py:25
 #, python-format
 msgid "Successfully deleted %d audio files."
-msgstr ""
+msgstr "Eliminado correctamente %d archivos de audio."
 
 #: models.py:14
 msgid "Audio Name"
-msgstr ""
+msgstr "Nombre de audio"
 
 #: models.py:15
 msgid "Audio file label"
-msgstr ""
+msgstr "Etiqueta del audio"
 
 #: models.py:19 models.py:27
 msgid "Audio file"
-msgstr ""
+msgstr "Archivo de audio"
 
 #: models.py:21
 msgid "Select User"
-msgstr ""
+msgstr "Seleccione Usuario"
 
 #: models.py:28
 msgid "Audio files"
-msgstr ""
+msgstr "Los archivos de audio"
 
 #: models.py:46
 msgid "Audio file player"
-msgstr ""
+msgstr "Reproductor de archivos de audio"
 
 #: settings.py:174
 msgid "English"
-msgstr ""
+msgstr "Inglés"
 
 #: settings.py:176
 msgid "Spanish"
-msgstr ""
+msgstr "Español"
 
 #: settings.py:177
 msgid "Portuguese"
-msgstr ""
+msgstr "Portugués"
 
 #: widgets.py:10 widgets.py:16
 msgid "Keep original"
-msgstr ""
+msgstr "Conservar original"
 
 #: widgets.py:11
 msgid "Mono"
-msgstr ""
+msgstr "Mono"
 
 #: widgets.py:12
 msgid "Stereo"
-msgstr ""
+msgstr "Estéreo"
 
 #: widgets.py:17
 msgid "8000 Hz"
-msgstr ""
+msgstr "8000 Hz"
 
 #: widgets.py:18
 msgid "16000 Hz"
-msgstr ""
+msgstr "16.000 Hz"
 
 #: widgets.py:19
 msgid "22050 Hz"
-msgstr ""
+msgstr "22050 Hz"
 
 #: widgets.py:20
 msgid "44100 Hz"
-msgstr ""
+msgstr "44100 Hz"
 
 #: widgets.py:21
 msgid "48000 Hz"
-msgstr ""
+msgstr "48000 Hz"
 
 #: widgets.py:25
 msgid "Keep original audio file"
-msgstr ""
+msgstr "Mantener el archivo de audio original"
 
 #: widgets.py:26
 msgid "Convert to MP3"
-msgstr ""
+msgstr "Convertir a MP3"
 
 #: widgets.py:27
 msgid "Convert to WAV"
-msgstr ""
+msgstr "Convertir a WAV"
 
 #: widgets.py:28
 msgid "Convert to OGG"
-msgstr ""
+msgstr "Convertir a OGG"
 
 #: widgets.py:65
 msgid "Allowed format - mp3 wav and ogg"
-msgstr ""
+msgstr "Formato permite - mp3 wav y ogg"
 
 #: widgets.py:68 widgets.py:121
 msgid "Currently:"
-msgstr ""
+msgstr "En la actualidad:"
 
 #: widgets.py:71 widgets.py:124
 msgid "Change:"
-msgstr ""
+msgstr "Cambio:"
 
 #: widgets.py:73
 msgid "Upload:"
-msgstr ""
+msgstr "Subir:"
 
 #: widgets.py:75
 msgid "Convert To:"
-msgstr ""
+msgstr "Convertir a:"
 
 #: widgets.py:76
 msgid "Channel:"
-msgstr ""
+msgstr "Canal:"
 
 #: widgets.py:77
 msgid "Frequency:"
-msgstr ""
+msgstr "Frecuencia:"
 
 #: widgets.py:80
 msgid "Delete:"
-msgstr ""
+msgstr "Eliminar:"
 
 #: widgets.py:117
 msgid "Allowed format - mp3, wav and ogg"
-msgstr ""
+msgstr "Formato permite - mp3, wav y ogg"
+
