fix add celery requirement

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+0.5.1 (2012-10-16)
+------------------
+
+* Add celery requirements
+
+
 0.5 (2012-10-04)
 ------------------
 
