--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+0.5.3 (2012-12-04)
+------------------
+
+* Replace commands by subprocess
+
+
 0.5.2 (2012-10-16)
 ------------------
 
