--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+0.5.4 (2012-12-05)
+------------------
+
+* Fix sox conversion
+
+
 0.5.3 (2012-12-04)
 ------------------
 
