update CHANGES.txt and version

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.5.5 (2013-03-07)
+------------------
+
+* update trans string
+
 
 0.5.4 (2012-12-05)
 ------------------
