--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.5.6 (2013-10-24)
+------------------
+
+* change permission name to view_audiofile
+
+
 0.5.5 (2013-03-07)
 ------------------
 
