--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,16 +1,23 @@
 Changelog
 =========
 
+
+0.5.7 (2013-10-26)
+------------------
+
+* Fix convertion from MP3 to WAV and from OGG to WAV
+
+
 0.5.6 (2013-10-24)
 ------------------
 
-* change permission name to view_audiofile
+* Change permission name to view_audiofile
 
 
 0.5.5 (2013-03-07)
 ------------------
 
-* update trans string
+* Update trans string
 
 
 0.5.4 (2012-12-05)
