--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+0.5.9 (2014-02-05)
+------------------
+
+* Reduce dependencies to django-lets-go
+
+
 0.5.8 (2013-10-26)
 ------------------
 
